test/integration/bad/numeric-literal/int-bad2.stan
transformed data {
    int n = 10__000;
}